--- a/app/index.html
+++ b/app/index.html
@@ -13,17 +13,16 @@
     <div id="sidebar-wrapper" ng-controller="labelController">
         <ul class="sidebar-nav">
             <li class="sidebar-brand"><a href="#">Task Tracker</a></li>
-            <li><a href="#" class="inbox_icon">Inbox</a><div class="todo-badge">{{getTasksLengthForLabel('Inbox')}}</div></li>
-            <li><a href="#"  class="all_icon">All Tasks</a><div class="todo-badge">{{getAllTasksLength()}}</div></li>
-            <li><a href="#"  class="pending_icon">All Pending</a><div class="todo-badge">{{getPendingTasksLength()}}</div></li>
+            <li><a href="#" class="inbox_icon" ng-click="setLabel('Inbox')">Inbox</a><div class="todo-badge">{{getTasksLengthForLabel('Inbox')}}</div></li>
+            <li><a href="#"  class="all_icon" ng-click="setLabel('All Tasks')">All Tasks</a><div class="todo-badge">{{getAllTasksLength()}}</div></li>
+            <li><a href="#"  class="pending_icon" ng-click="setLabel('All Pending')">All Pending</a><div class="todo-badge">{{getPendingTasksLength()}}</div></li>
             <li><br></li>
 
             <li ng-repeat="label in data">
                 <div class="circle" ng-class="label.color"></div>
-                <a href="#">{{label.name}}</a>
+                <a ng-click="setLabel(label.name)">{{label.name}}</a>
                 <div class="todo-badge">{{getTasksLengthForLabel(label.name)}}</div>
             </li>
-
 
         </ul>
     </div>
@@ -41,44 +40,7 @@
                 </div>
             </div>
         </div>
-
-        <div class="padding-20" id="page-body" ng-controller="taskListController">
-            <div class="panel panel-default bg-update">
-                <div class="panel-body">
-                    <div class="panel-top-header">
-                        Inbox
-                        <i class="fa fa-pencil-square-o pull-right action-icon"></i>
-                    </div>
-
-                    <div class="padding-20">
-                        <form class="form-horizontal form-padding padding-bottom-20" >
-                            <div class="row">
-                                <div class="col-sm-10" >
-                                    <input type="text" class="form-control input-create-task" placeholder="Create New Task"/>
-                                </div>
-                                <div class="col-sm-1">
-
-                                </div>
-                                <div class="col-sm-1">
-                                    <button type="button" class="btn btn-info pull-right" onclick="javascript:window.open('createTask.html','_self')">Add Task</button>
-                                </div>
-                            </div>
-                        </form>
-
-                        <ul class="list-group">
-                            <li class="list-group-item" ng-repeat="task in data1">
-                                <input id="{{task.id}}" type="checkbox" checked>
-                                <label for="{{task.id}}" class='checkbox-label'>{{task.name}}</label>
-                                <span class="glyphicon glyphicon-trash pull-right action-icon"  aria-hidden="true"></span>
-                                <span class="glyphicon glyphicon-pencil pull-right action-icon"  aria-hidden="true"></span>
-                                <span class="glyphicon glyphicon-star-empty pull-right action-icon"  aria-hidden="true"></span>
-                                <span class="glyphicon glyphicon-time pull-right action-icon"  aria-hidden="true"></span>
-                            </li>
-                        </ul>
-                    </div>
-                </div>
-            </div>
-        </div>
+        <div ui-view></div>
     </div>
 </div>
 
@@ -102,7 +64,7 @@
     <script src="bower_components/angular-route/angular-route.js"></script>
     <script src="bower_components/angular-sanitize/angular-sanitize.js"></script>
     <script src="bower_components/angular-touch/angular-touch.js"></script>
-
+    <script src="bower_components/angular-ui-router/release/angular-ui-router.js"></script>
         <script src="scripts/app.js"></script>
         <script src="scripts/controllers/main.js"></script>
         <script src="scripts/controllers/about.js"></script>
