--- a/app/index.html
+++ b/app/index.html
@@ -26,7 +26,7 @@
 
         </ul>
     </div>
-    <div id="page-content-wrapper">
+    <div id="page-content-wrapper" ng-controller="headerController">
         <div class="panel panel-default bg-container" id="page-header">
             <div class="panel-body">
                 <div class="panel-top-header padding-header">
@@ -34,7 +34,7 @@
                         <div class="row height-65">
                             <label class="col-sm-1 filter-text">Filter By :</label>
                             <div class="col-sm-2 filter-input"><input type="text" class="form-control" /></div>
-                            <button type="button" id="btnCreateLabel" class="btn btn-danger pull-right btn-task-category" onclick="javascript:window.open('createLabel.html','_self')">Create Label</button>
+                            <button type="button" id="btnCreateLabel" class="btn btn-danger pull-right btn-task-category" ng-click="createNewLabel()">Create Label</button>
                         </div>
                     </form>
                 </div>
@@ -70,6 +70,7 @@
         <script src="scripts/controllers/about.js"></script>
         <script src="scripts/controllers/label.js"></script>
         <script src="scripts/controllers/task.js"></script>
+        <script src="scripts/controllers/header.js"></script>
         <script src="scripts/services/common-services.js"></script>
 </body>
 </html>
